microservices/common-service/deployment/deployment-mon-com.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-service-mon-com
  namespace: transversales
spec:
  replicas: 1
  selector:
    matchLabels:
      app: common-service
      version: mon-com
  template:
    metadata:
      labels:
        app: common-service
        version: mon-com
        flow: monetario
        layer: composicion
    spec:
      containers:
        - name: common-service
          image: common-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
