microservices/common-service/deployment/deployment-oper-com.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-service-oper-com 
  namespace: transversales
spec:
  replicas: 1
  selector:
    matchLabels:
      app: common-service
      version: oper-com  
  template:
    metadata:
      labels:
        app: common-service
        version: oper-com  
        flow: operativo
        layer: composicion
    spec:
      containers:
        - name: common-service
          image: common-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
