microservices/common-service/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: common-service
  namespace: transversales 
spec:
  selector:
    app: common-service
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
